test/libsolidity/syntaxTests/denominations/invalid_denomination_no_whitespace.sol
contract C {
	uint constant y = 1wei;
}
// ----
// ParserError 8936: (32-33): Identifier-start is not allowed at end of a number.
